clean up css fix picture wrap brute force (does not pick up picuture class yet just restyles existing) also add icons for subscribe links

--- a/mingus/media/static/css/base.css
+++ b/mingus/media/static/css/base.css
@@ -92,7 +92,7 @@ body {
     margin: 1.2em 0em 1.2em 1.2em; 
     padding: .8em .8em 0em 1.6em; 
     background-color: #e4e4e4; 
-    width: 564px; 
+    width: 220px; 
     border-left: solid 1.0em #dedede;
 }
 
